# brute-force-training

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
brute_force_training/: __init__.py  cli.py  config.py
brute_force_training/datasets/: __init__.py  text_only.py  vision_language.py
brute_force_training/trainers/: __init__.py  base.py  lfm2_vl.py  qwen25_vl.py  qwen2_vl.py  qwen3.py
brute_force_training/utils/: __init__.py  documentation.py  evaluation.py  image_utils.py  tokenization.py
examples/: README.md  config_example.json  fixed_medieval_training.py  qwen3_with_prompts.py  train_qwen2_vl.py  train_qwen3.py  train_with_docs.py  use_config.py
